tests/ui/ferrocene/compiler-arguments/upper_c_codegen-units/upper_c_codegen-units_space-empty.rs
//@ check-fail
//@ compile-flags: -C codegen-units
//~? ERROR requires a number

fn main() {}

// ferrocene-annotations: um_rustc_C_codegen_units
